<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_abbrevation">MSONGO</string>
    <string name="app_name">Mobile Survey On Go</string>

    <!-- Tabs -->
    <string name="map">Map</string>
    <string name="timeline">Timeline</string>
    <string name="export">Export</string>

    <!-- Generic -->
    <string name="loading">Loading</string>
    <string name="choose">Choose</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!-- Login -->
    <string name="login_register_your_self">Hello, Register yourself</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_name">This name is too short</string>
    <string name="error_field_required">This field is required</string>

    <!-- Map -->
    <string name="content_desc_map_toggle">Toggle map type</string>
    <string name="content_desc_gps_location">Move to current location</string>
    <string name="content_desc_zoom_in">Zoom in</string>
    <string name="content_desc_zoom_out">Zoom out</string>
    <string name="map_add_content_header">Enter details</string>
    <string name="map_project_name">Name of project</string>
    <string name="map_date_of_survey">Date of survey</string>
    <string name="map_study_area_name">Study area name</string>
    <string name="map_survey_place_name">Survey place name</string>
    <string name="map_type_of_place">Type of place</string>
    <string name="map_other_type_of_place">Other type of place</string>
    <string name="map_notes">Notes</string>
    <string-array name="map_place_types">
        <item>Roads</item>
        <item>Water Ways Route</item>
        <item>Bus, Railway Line &amp; Stations</item>
        <item>Airport</item>
        <item>Jetties</item>
        <item>Environment Sensitive Area (ESA)</item>
        <item>Wildlife Protected Area</item>
        <item>Forest Protected Area</item>
        <item>No Development Area</item>
        <item>Limited Development Area</item>
        <item>Information Centre</item>
        <item>Tourist Spots</item>
        <item>Government Health Canter</item>
        <item>Government Rest House</item>
        <item>School</item>
        <item>Water Bodies</item>
        <item>Entertainment</item>
        <item>Community Centre (Mall)</item>
        <item>Industrial Area</item>
        <item>Other</item>
    </string-array>

    <!-- Export -->
    <string name="export_dialog_hint">Enter a name for export file</string>
    <string name="export_label">Export your data</string>
    <string name="export_text">Text</string>
    <string name="export_pdf">PDF</string>
    <string name="export_csv">CSV (Excel)</string>

    <!-- Tag keys -->
    <string name="tag_latitude">tag_latitude</string>
    <string name="tag_longitude">tag_longitude</string>
    <string name="tag_year">tag_year</string>
    <string name="tag_month">tag_month</string>
    <string name="tag_day">tag_day</string>
    <string name="toggle_out">Show Tabs</string>
    <string name="toggle_in">Hide Tabs</string>
    <string name="spinner_value">Spinner Value</string>

    <!-- Preference Keys -->
    <string name="key_map_zoom_enabled">map_zoom_enabled</string>
    <string name="key_map_state__save_enabled">map_state__save_enabled</string>
    <string name="map_summary">Settings for Map</string>
    <string name="map_zoom_enable_summary">Show zoom controls</string>
    <string name="map_state_save_summary">Save last map state</string>
    <string name="about">About</string>
    <string name="about_summary">Save last map state</string>
    <string name="version">Version 1.0 beta</string>
    <string name="contact">Contact</string>
    <string name="contact_summary">Contact us</string>
    <string name="contact_email">support@ceeq.in</string>

</resources>