<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:summary="@string/map_summary"
        android:title="@string/map" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_map_zoom_enabled"
            android:persistent="true"
            android:title="@string/map_zoom_enable_summary" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/key_map_state__save_enabled"
            android:persistent="true"
            android:title="@string/map_state_save_summary" />
    </PreferenceCategory>
    
    <PreferenceCategory
        android:summary="@string/about_summary"
        android:title="@string/about" >
       <Preference android:title="@string/version" />
    </PreferenceCategory>

    <PreferenceCategory
        android:summary="@string/contact_summary"
        android:title="@string/contact" >
       <Preference android:title="@string/contact_email" />
    </PreferenceCategory>
</PreferenceScreen>