<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/background_card"
              android:orientation="vertical"
              tools:context="in.ceeq.msongo.activity.HomeActivity">

    <TextView
        android:id="@+id/addLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/map_add_content_header"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/blue"
        android:textSize="24sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/light_background">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/dateOfSurveyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/map_date_of_survey"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/light_black"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/dateOfSurvey"
                style="@android:style/ButtonBar"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="@drawable/background_card"
                android:drawableLeft="@drawable/ic_today"
                android:gravity="left|center_vertical"
                android:minHeight="24dp"
                android:padding="16dp"
                android:text="@string/choose"
                android:textAllCaps="true"
                android:textColor="@color/green"/>

            <EditText
                android:id="@+id/projectName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:ems="10"
                android:hint="@string/map_project_name"
                android:inputType="text">
            </EditText>

            <EditText
                android:id="@+id/studyAreaName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:ems="10"
                android:hint="@string/map_study_area_name"
                android:inputType="text">
            </EditText>

            <EditText
                android:id="@+id/surveyPlaceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:ems="10"
                android:hint="@string/map_survey_place_name"
                android:inputType="text">
            </EditText>

            <Spinner
                android:id="@+id/typeOfPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="8dp"/>
            <!--
            <EditText
                android:id="@+id/otherTypeOfPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/map_other_type_of_place"
                android:inputType="text">
            </EditText> -->

            <EditText
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/map_notes"
                android:inputType="text">
            </EditText>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:divider="@android:drawable/divider_horizontal_bright"
        android:dividerPadding="8dp"
        android:showDividers="middle"
        android:background="@color/card_background">

        <LinearLayout
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cancelTextView"
                style="@android:style/Holo.SegmentedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:drawableLeft="@drawable/ic_close"
                android:gravity="center_vertical|center_horizontal"
                android:padding="16dp"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/red"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/saveTextView"
                style="@android:style/ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/ic_check"
                android:gravity="center_vertical|center_horizontal"
                android:padding="16dp"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@color/green"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>