<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         xmlns:tools="http://schemas.android.com/tools"
        tools:context="in.ceeq.msongo.activity.HomeActivity" >

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="24dp"
            android:background="@drawable/background_card"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/toggle_out"
                style="@null"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/card_background"
                android:contentDescription="@string/toggle_out"
                android:padding="14dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_action_drawer" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_card"
            android:divider="@android:drawable/divider_horizontal_bright"
            android:dividerPadding="6dp"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:visibility="gone" >

            <TextView
                android:id="@+id/mapLabel"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/map"
                android:textAllCaps="true"
                android:textColor="#454545" />

            <TextView
                android:id="@+id/timeLineLabel"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/timeline"
                android:textAllCaps="true"
                android:textColor="#454545" />

            <TextView
                android:id="@+id/exportLabel"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/export"
                android:textAllCaps="true"
                android:textColor="#454545" />

            <ImageButton
                android:id="@+id/settings"
                style="@null"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/card_background"
                android:contentDescription="@string/toggle_in"
                android:padding="4dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_settings" />

            <ImageButton
                android:id="@+id/toggle_in"
                style="@null"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/card_background"
                android:contentDescription="@string/toggle_in"
                android:padding="14dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_action_drawer" />

        </LinearLayout>
    </RelativeLayout>
